# document-image-enhancer

./: .gitignore  README.md
paper/: literature.bib  paper.tex
project/: CMakeCache.txt  CMakeLists.txt  build.sh  main.cpp
project/image_enhancer_lib/: CMakeLists.txt
project/image_enhancer_lib/include/: image_enhancer.h
project/image_enhancer_lib/src/: image_enhancer.cpp
project/python_scripts/: Scanner_enhancing_python.py  Scanner_enhancing_python_V2.py  fast_conv.py  im_read.py  visualizing_moving_norm.py
